--- a/packages/smui-theme/_style.scss
+++ b/packages/smui-theme/_style.scss
@@ -42,3 +42,4 @@
 @use '@smui/tooltip/style' as tooltip;
 @use '@smui/top-app-bar/style' as top-app-bar;
 @use '@smui/touch-target/style' as touch-target;
+@use '@smui-extra/badge/style' as badge;
