feat: new accordion component

--- a/packages/smui-theme/_style.scss
+++ b/packages/smui-theme/_style.scss
@@ -42,5 +42,6 @@
 @use '@smui/tooltip/style' as tooltip;
 @use '@smui/top-app-bar/style' as top-app-bar;
 @use '@smui/touch-target/style' as touch-target;
+@use '@smui-extra/accordion/style' as accordion;
 @use '@smui-extra/autocomplete/style' as autocomplete;
 @use '@smui-extra/badge/style' as badge;
