docs: update sveltekit instructions to include ssr error workaround

--- a/packages/site/src/app.scss
+++ b/packages/site/src/app.scss
@@ -100,6 +100,13 @@ body,
   }
 }
 
+code {
+  background-color: theme.$secondary;
+  color: theme.$on-secondary;
+  border-radius: 4px;
+  padding: 0 2px;
+}
+
 section.markdown {
   h1 {
     @include typography.typography('headline2');
