--- a/packages/site/src/theme/_smui-theme.scss
+++ b/packages/site/src/theme/_smui-theme.scss
@@ -8,7 +8,7 @@
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
-  $error: color-palette.$red-900,
+  $error: color-palette.$red-900
 );
 
 html,
