fix: upgrade packages and fix issues with new versions

--- a/packages/snackbar/_style.scss
+++ b/packages/snackbar/_style.scss
@@ -1,5 +1,6 @@
 @use '@material/theme/theme-color';
-@use '@material/snackbar/index' as snackbar with
-  ($action-ink-color: theme-color.prop-value(primary));
+@use '@material/snackbar/index' as snackbar with (
+  $action-ink-color: theme-color.prop-value(primary)
+);
 
 @include snackbar.core-styles;
