--- a/packages/site/src/site.scss
+++ b/packages/site/src/site.scss
@@ -27,4 +27,5 @@
 @use './routes/demo/linear-progress/_Colored.scss' as linear-progress-colored;
 @use './routes/demo/menu-surface/_ManualAnchor.scss';
 @use './routes/demo/paper/_CustomColor.scss' as paper-custom-color;
+@use './routes/demo/snackbar/_Colors.scss';
 @use './routes/demo/typography/_Typography.scss';
