fix: wrong border radius on last accordion panel (but actually this time)

--- a/packages/accordion/_mixins.scss
+++ b/packages/accordion/_mixins.scss
@@ -139,7 +139,7 @@ $divider-color-on-dark-bg: rgba(255, 255, 255, 0.2) !default;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
       }
-      &:first-child:not(:first-child) {
+      &:last-child:not(:first-child) {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
       }
