chore: update scss references to new mdc-web version

--- a/packages/site/src/routes/demo/snackbar/_Colors.scss
+++ b/packages/site/src/routes/demo/snackbar/_Colors.scss
@@ -1,6 +1,6 @@
-// See https://github.com/material-components/material-components-web/blob/v13.0.0/packages/mdc-snackbar/
+// See https://github.com/material-components/material-components-web/tree/v14.0.0/packages/mdc-snackbar
 @use '@material/snackbar/mixins';
-// See https://github.com/material-components/material-components-web/blob/v13.0.0/packages/mdc-theme/
+// See https://github.com/material-components/material-components-web/tree/v14.0.0/packages/mdc-theme
 @use '@material/theme/color-palette';
 @use '@material/theme/theme-color';
 
