refactor: turn off pointer events on accordion ripple target

--- a/packages/accordion/_mixins.scss
+++ b/packages/accordion/_mixins.scss
@@ -198,6 +198,7 @@ $divider-color-on-dark-bg: rgba(255, 255, 255, 0.2) !default;
             height: 100%;
             overflow: hidden;
             z-index: 0;
+            pointer-events: none;
           }
         }
       }
