feat: new bottom app bar component

--- a/packages/smui-theme/_style.scss
+++ b/packages/smui-theme/_style.scss
@@ -45,3 +45,4 @@
 @use '@smui-extra/accordion/style' as accordion;
 @use '@smui-extra/autocomplete/style' as autocomplete;
 @use '@smui-extra/badge/style' as badge;
+@use '@smui-extra/bottom-app-bar/style' as bottom-app-bar;
