--- a/packages/site/src/app.scss
+++ b/packages/site/src/app.scss
@@ -1,20 +1,21 @@
 // Elevation mixins.
-@use '@material/elevation/index' as elevation;
+@use '@material/elevation/mixins' as elevation;
 
 // Paper mixins.
-@use '@smui/paper/index' as paper;
-@use '@material/theme/index' as theme;
+@use '@smui/paper/mixins' as paper;
+@use '@material/theme/mixins' as theme;
 
 // Typography mixins.
-@use '@material/typography/index' as typography;
+@use '@material/typography/mixins' as typography;
 
 // Main Top App Bar styling.
-@use '@material/top-app-bar/index' as top-app-bar;
+@use '@material/top-app-bar/mixins' as top-app-bar-mixins;
+@use '@material/top-app-bar/variables' as top-app-bar-variables;
 .mdc-top-app-bar.demo-top-app-bar {
   // Color the top bar with "surface" colors.
-  @include top-app-bar.fill-color(surface);
-  @include top-app-bar.ink-color(on-surface);
-  @include top-app-bar.icon-ink-color(on-surface);
+  @include top-app-bar-mixins.fill-color(surface);
+  @include top-app-bar-mixins.ink-color(on-surface);
+  @include top-app-bar-mixins.icon-ink-color(on-surface);
   // Give it a shadow.
   @include elevation.elevation(4);
   // Position it above the drawer.
@@ -46,10 +47,11 @@ body,
 .demo-main-content {
   overflow: auto;
   height: 100%;
+  border-radius: 0;
 }
 
 .demo-drawer.demo-drawer-adjust {
-  padding-bottom: top-app-bar.$row-height;
+  padding-bottom: top-app-bar-variables.$row-height;
 }
 
 .demo-app-content {
