--- a/packages/site/src/routes/demo/circular-progress/_FourColor.scss
+++ b/packages/site/src/routes/demo/circular-progress/_FourColor.scss
@@ -1,8 +1,9 @@
-@use '@material/circular-progress/index' as circular-progress;
-@use '@material/theme/index' as theme;
+@use '@material/circular-progress/mixins' as circular-progress;
+@use '@material/theme/color-palette';
 
 .my-four-colors {
   @include circular-progress.indeterminate-colors(
-    theme.$green-500 theme.$yellow-500 theme.$red-500 theme.$blue-500
+    color-palette.$green-500 color-palette.$yellow-500 color-palette.$red-500
+      color-palette.$blue-500
   );
 }
