docs: explain why the material theme files are basically empty

--- a/packages/site/src/theme/material-dark/_smui-theme.scss
+++ b/packages/site/src/theme/material-dark/_smui-theme.scss
@@ -3,6 +3,8 @@
   $background: #000000
 );
 
+// Basically just leave everything default (but with a dark bg).
+
 html,
 body {
   background-color: theme.$background;
