--- a/packages/site/src/theme/material/_smui-theme.scss
+++ b/packages/site/src/theme/material/_smui-theme.scss
@@ -1,5 +1,7 @@
 @use '@material/theme/index' as theme;
 
+// Basically just leave everything default.
+
 html,
 body {
   background-color: theme.$background;
