docs: fix some mobile styling issues

--- a/packages/site/src/app.scss
+++ b/packages/site/src/app.scss
@@ -25,8 +25,8 @@
 // Now on to the regular app styling stuff.
 
 html {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   position: fixed;
 }
 
