--- a/packages/site/src/theme/metro-dark/_smui-theme.scss
+++ b/packages/site/src/theme/metro-dark/_smui-theme.scss
@@ -42,7 +42,8 @@
 
 @font-face {
   font-family: 'Selawik';
-  src: url('/Selawik_Release/selawk.woff2') format('woff2'),
+  src:
+    url('/Selawik_Release/selawk.woff2') format('woff2'),
     url('/Selawik_Release/selawk.woff') format('woff'),
     url('/Selawik_Release/selawk.eot') format('eot'),
     url('/Selawik_Release/selawk.ttf') format('ttf');
@@ -50,7 +51,8 @@
 
 @font-face {
   font-family: 'Selawik Light';
-  src: url('/Selawik_Release/selawkl.woff2') format('woff2'),
+  src:
+    url('/Selawik_Release/selawkl.woff2') format('woff2'),
     url('/Selawik_Release/selawkl.woff') format('woff'),
     url('/Selawik_Release/selawkl.eot') format('eot'),
     url('/Selawik_Release/selawkl.ttf') format('ttf');
@@ -58,7 +60,8 @@
 
 @font-face {
   font-family: 'Selawik Bold';
-  src: url('/Selawik_Release/selawkb.woff2') format('woff2'),
+  src:
+    url('/Selawik_Release/selawkb.woff2') format('woff2'),
     url('/Selawik_Release/selawkb.woff') format('woff'),
     url('/Selawik_Release/selawkb.eot') format('eot'),
     url('/Selawik_Release/selawkb.ttf') format('ttf');
